# MinesweeperAndMatricies

./: .gitignore  CMakeLists.txt  LICENSE  README.markdown
src/: CMakeLists.txt  game.cpp  game.h  logging.h  main.cpp  matrix.c  matrix.cpp  matrix.h  solver.cpp  solver.h  vector.c  vector.cpp  vector.h
test/: CMakeLists.txt  run-tests.c  testmatrix.c  testmatrix.cpp  testmatrix.h  testvector.cpp  testvector.h
